# mafia-with-llms

./: .gitignore  README.md  chat.tscn  configuration.tscn  developer.tscn  export_presets.cfg  main.tscn  main.tscn.bak  menu.tscn  project.godot  rust.gdextension  rust.gdextension.uid  world.tscn
images/: claude.png.import  deepseek.png.import  gemini.png.import  grok.png.import  kimi.png.import  openai.png.import  user.png.import  zai.png.import
models/: building.tscn  lamp.glb  lamp.glb.import  model.tscn  tree.glb  tree.glb.import
rust/: Cargo.toml
rust/src/: actor.rs  chat.rs  configuration.rs  lib.rs  main.rs.bak  main_node.rs  tokio.rs
rust/src/actor/: llm_actor.rs  mod.rs  real_actor.rs
rust/src/chat/: mod.rs  ui.rs  visuals.rs
rust/src/data/: action.rs  channel.rs  context_entry.rs  extra_data.rs  mod.rs  roles.rs
rust/src/game/: access.rs  discussion.rs  init.rs  iterate.rs  mod.rs  voting.rs
rust/src/llm/: ai_interface.rs  mod.rs  model_pool.rs  tools.rs
rust/src/prompts/: general.rs  specific.rs  utter_beginning.txt
scenes/: chat.tscn  configuration.tscn  menu.tscn  message.tscn  world.tscn
