[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", features = ["experimental-threads"] }
async-openai = { version = "*", features = ["chat-completion", "byot"] }
tokio = { version = "*", features = ["rt-multi-thread"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
schemars = "*"
rand = "*"
rfd = "*"

[lib]
crate-type = ["cdylib"]

[features]
default = ["development"]
development = []
